# goit-web_hw-module-9

./: .gitignore  main.py  pyproject.toml
lessons/: 1_lesson.py  2_lesson.py
lessons/lesson_1__Beautiful_soup__Requests/: lesson_2.py  lesson_3.py
lessons/lesson_1__Beautiful_soup__Requests/practice_1/: app.py
lessons/practice_1/: app.py
seeds/: authors.json
test_spyder/test_spyder/: settings.py
test_spyder/test_spyder/spiders/: authors.py
